@@ -2,10 +2,9 @@ package com.adnanbk.ecommerceang.services.imp;
 
 import com.adnanbk.ecommerceang.Utils.ExcelHelperI;
 import com.adnanbk.ecommerceang.models.Product;
-import com.adnanbk.ecommerceang.models.ProductCategory;
-import com.adnanbk.ecommerceang.reposetories.ProductCategoryRepository;
 import com.adnanbk.ecommerceang.reposetories.ProductRepository;
 import com.adnanbk.ecommerceang.services.ProductService;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -20,39 +19,35 @@ import java.util.stream.Collectors;
 public class ProductServiceImp implements ProductService {
 
     private ProductRepository productRepo;
-    private ProductCategoryRepository categoryRepo;
     private ExcelHelperI<Product> excelHelper;
 
-    public ProductServiceImp(ProductRepository productRepo, ProductCategoryRepository categoryRepo, ExcelHelperI<Product> excelHelper) {
+    @Value("${api.url}")
+    private String baseUrl;
+    public ProductServiceImp(ProductRepository productRepo, ExcelHelperI<Product> excelHelper) {
         this.productRepo = productRepo;
-        this.categoryRepo = categoryRepo;
         this.excelHelper = excelHelper;
     }
 
     @Override
     @CacheEvict(value =  "allPro",allEntries = true)
-    public  Product updateProduct(Product product, String baseUrl) {
-        return productRepo.findById(product.getId()).map(prod -> {
-            mapProduct(product, prod,baseUrl);
-          return   productRepo.save(prod);
-        }).get();
-    }
+    public Product addProduct(Product product) {
 
-    @Override
-    @CacheEvict(value =  "allPro",allEntries = true)
-    public Product addProduct(Product product, String baseUrl) {
-        var cat = fetchCategoryByName(product.getCategoryName());
-        product.setCategory(cat);
-        if (!product.getImage().isEmpty() && !product.getImage().startsWith("http")
-                && !product.getImage().startsWith("assets"))
-            product.setImage(baseUrl + "/api/products/images/" + product.getImage());
+           mapProductImage(product);
         return productRepo.save(product);
     }
 
     @Override
     @CacheEvict(value =  "allPro",allEntries = true)
-    public List<Product> updateProducts(List<Product> products, String baseUrl) {
-        var updatedProducts = findAndMapProducts(products, baseUrl);
+    public  Product updateProduct(Product product) {
+        Product prod= productRepo.getOne(product.getId());
+        mapProduct(product, prod);
+        return   productRepo.save(prod);
+    }
+
+    @Override
+    @CacheEvict(value =  "allPro",allEntries = true)
+    public List<Product> updateProducts(List<Product> products) {
+        var updatedProducts = mapProducts(products);
         return productRepo.saveAll(updatedProducts);
     }
 
@@ -63,18 +58,11 @@ public class ProductServiceImp implements ProductService {
         productRepo.deleteInBatch(productRepo.findAllById(productsIds));
     }
 
-    private ProductCategory fetchCategoryByName(String categoryName) {
-        var cat = categoryRepo.findByName(categoryName);
-        if (cat == null)
-            throw new ValidationException("Category not found");
-        return cat;
-    }
-
     @CacheEvict(value =  "allPro",allEntries = true)
     public List<Product> saveAllFromExcel(MultipartFile multipartFile, String baseUrl) {
         try {
             List<Product> products = excelHelper.excelToList(multipartFile.getInputStream())
-                                    .stream().map(product -> mapProduct(product,baseUrl)).collect(Collectors.toList());
+                                    .stream().map(this::mapProductImage).toList();
                  if(products.size()>0)
                 return productRepo.saveAll(products);
 
@@ -101,31 +89,21 @@ public class ProductServiceImp implements ProductService {
         return excelHelper.listToExcel(productRepo.findAll());
     }
 
-    private void mapProduct(Product productSrc, Product productDest,String baseUrl) {
-        if (productSrc.getCategoryName() != null &&
-                !productDest.getCategoryName().equalsIgnoreCase(productSrc.getCategoryName())) {
-            var cat = fetchCategoryByName(productSrc.getCategoryName());
-            productDest.setCategory(cat);
-        }
+    private void mapProduct(Product productSrc, Product productDest) {
         productDest.setFromProduct(productSrc);
-        if (!productSrc.getImage().startsWith("http") && !productSrc.getImage().startsWith("assets"))
-            productDest.setImage(baseUrl + "/api/products/images/" + productSrc.getImage());
+            mapProductImage(productDest);
     }
-    private Product mapProduct(Product productSrc,String baseUrl) {
-        if (productSrc.getCategoryName() != null){
-            var cat = fetchCategoryByName(productSrc.getCategoryName());
-            productSrc.setCategory(cat);
-        }
+    private Product mapProductImage(Product productSrc) {
         if (!productSrc.getImage().startsWith("http") && !productSrc.getImage().startsWith("assets"))
-            productSrc.setImage(baseUrl + "/api/products/images/" + productSrc.getImage());
-        return productSrc;
+            productSrc.setImage(baseUrl + "/products/images/" + productSrc.getImage());
+        return  productSrc;
     }
-    private List<Product> findAndMapProducts(List<Product> products, String baseUrl) {
+    private List<Product> mapProducts(List<Product> products) {
         return productRepo.findAllById(products.stream()
                 .map(Product::getId).collect(Collectors.toList()))
                 .stream().peek(prod -> {
                     var product = products.stream().filter(p -> p.getId().equals(prod.getId())).findFirst();
-                    product.ifPresent(value -> mapProduct(value, prod,baseUrl));
+                    product.ifPresent(value -> mapProduct(value, prod));
                 }).collect(Collectors.toList());
     }
 }
